--- a/configure.in
+++ b/configure.in
@@ -18,7 +18,7 @@ AM_INIT_AUTOMAKE("$PACKAGE", "$VERSION")
 dnl Required Autoconf version.
 AC_PREREQ(2.61)
 
-AC_REVISION([#ident "@(#)newsyslog:$Name:  $:$Id: configure.in,v 1.48 2009/04/26 05:28:09 woods Exp $"])
+AC_REVISION([#ident "@(#)newsyslog:$Name:  $:$Id: configure.in,v 1.49 2009/04/26 19:10:07 woods Exp $"])
 
 AM_CONFIG_HEADER(config.h)
 
@@ -78,11 +78,16 @@ AC_CHECK_TYPES(unsigned long long)
 AC_TYPE_SIGNAL
 
 dnl Checks for library functions.
-# note sys_signame is not a function, but this test works anyway thanks to C....
-AC_REPLACE_FUNCS(setgroupent setpassent sig2str snprintf str2sig strdup strerror strptime strsignal strtok sys_signame)
+# note sys_signame is not a function, but this test works anyway
+# thanks to C and the way the tests are written for this check....
+AC_REPLACE_FUNCS([setgroupent setpassent sig2str snprintf str2sig strdup \
+	          strerror strptime strsignal strtok sys_signame])dnl
 
 AC_DECL_SYS_SIGNAME
 AC_DECL_SYS_NSIG
+
+AC_CHECK_DECLS([setgroupent], [], [], [#include <grp.h>])
+AC_CHECK_DECLS([setpassent], [], [], [#include <pwd.h>])
 
 AC_CHECK_DECLS([sig2str, str2sig, strsignal], [], [], [#include <signal.h>
 #ifdef HAVE_UNISTD_H
