- oops -- we have to mention the new configure.in CPP flags here too   else the compile actually breaks on NetBSD.

--- a/Makefile.BSD.in
+++ b/Makefile.BSD.in
@@ -4,7 +4,7 @@
 # This file Copyright (C) by Planix, Inc.
 # - see COPYING for details.
 #
-#ident	"@(#)newsyslog:$Name:  $:$Id: Makefile.BSD.in,v 1.17 2009/03/05 21:04:15 woods Exp $"
+#ident	"@(#)newsyslog:$Name:  $:$Id: Makefile.BSD.in,v 1.18 2009/07/16 02:08:41 woods Exp $"
 #
 # NOTE:  It is expected that this file will be processed to create the
 # final version with something like the following, normally by running
@@ -51,12 +51,20 @@ CPPFLAGS+= -DRETSIGTYPE=void
 CPPFLAGS+= -DSTDC_HEADERS
 CPPFLAGS+= -DSYS_SIGNAME_DECLARED
 CPPFLAGS+= -DTIME_WITH_SYS_TIME
+CPPFLAGS+= -DHAVE_DECL_EXIT
+CPPFLAGS+= -DHAVE_DECL_GETOPT
+CPPFLAGS+= -DHAVE_DECL_OPTARG
+CPPFLAGS+= -DHAVE_DECL_OPTERR
+CPPFLAGS+= -DHAVE_DECL_OPTIND
+CPPFLAGS+= -DHAVE_DECL_OPTOPT
 CPPFLAGS+= -DHAVE_DECL_STRCHR
 CPPFLAGS+= -DHAVE_DECL_STRDUP
 CPPFLAGS+= -DHAVE_DECL_STRPTIME
 CPPFLAGS+= -DHAVE_DECL_STRRCHR
 CPPFLAGS+= -DHAVE_DECL_STRSIGNAL
 CPPFLAGS+= -DHAVE_DECL_STRTOK
+CPPFLAGS+= -DHAVE_DECL_STRTOL
+CPPFLAGS+= -DHAVE_DECL_STRTOUL
 CPPFLAGS+= -DHAVE_ERRNO_H
 CPPFLAGS+= -DHAVE_FLOCK
 CPPFLAGS+= -DHAVE_MEMORY_H
