--- a/newsyslog.conf
+++ b/newsyslog.conf
@@ -5,7 +5,7 @@
 # demonstration and documentation purposes and are not necessarily the
 # best for real life use!
 #
-#ident "#(@):$Name:  $:$Id: newsyslog.conf,v 1.15 2009/03/04 19:38:04 woods Exp $"
+#ident	"@(#)newsyslog:newsyslog.conf:$Format:%D:%ci:%cN:%h$"
 #
 # log_filename  [owner:group] mode count kb   hrs/at [flgs][/pid_file][sig]
 #               |             |    |     |    |      |     |          |
