comment out the news file
- usenet news is not so common any more, nor is the user:group

--- a/newsyslog.conf
+++ b/newsyslog.conf
@@ -25,7 +25,7 @@
 /var/log/lpr                  644  5     250  *      Z/0
 /var/log/mail  root:staff     640  52    *    W0     Z/0
 /var/log/messages             644  10    500  168    Z/
-/var/log/news  news:news      644  2     *    D0     Z/0
+#/var/log/news  news:news      644  2     *    D0     Z/0
 /var/log/smail/logfile        644  52    *    W0     bDNZ/0
 /var/log/smail/paniclog       644  5     500  168-D0 bDNZ/0
 /var/log/syslog               640  3     500  *      Z/0
