set exit status when run with '-n' and there is work to do
- primarily this is of interest to NetBSD's "postinstall" script, which
  can use this result in the "check" phase to tell the user if the "fix"
  step needs to be run

--- a/newsyslog.8so.in
+++ b/newsyslog.8so.in
@@ -209,6 +209,11 @@ were it to be run without the
 flag.  Use of this option implies
 .Fl r
 too.
+.Pp
+Note also that the exit status will be non-zero if anything needs
+doing.  This can be used by system configuration scripts, such as
+.Nx ' s
+.Xr postinstall 8 .
 .It Fl p Ar syslogd_pidfile
 Instruct newsyslog to use 
 .Ar syslogd_pidfile
